[package]
name        = "bokit"
version     = "0.0.1"
authors     = ["Aurelien Naldi <aurelien.naldi@gmail.com>"]
description = "Boolean function manipulation Kit"
repository  = "https://github.com/GINsim/bokit/"
license     = "LGPL-3.0-or-later"
edition     = "2021"

[dependencies]
bit-set     = "0.5"
delegate    = "0.6"
once_cell   = "1.10"
pest        = "2.1"
pest_derive = "2.1"
regex       = "1"
slab        = "0.4"
thiserror   = "1.0"
ouroboros = "0.15.0"


[dependencies.pyo3]
optional = true
version  = "0.16"
features = ["extension-module", "abi3", "abi3-py39"]

[lib]
crate-type = ["rlib", "cdylib"]
