[package]
name        = "bokit"
version     = "0.0.1"
authors     = ["Aurelien Naldi <aurelien.naldi@gmail.com>"]
description = "Boolean function manipulation Kit"
repository  = "https://github.com/GINsim/bokit/"
license     = "LGPL-3.0-or-later"
edition     = "2021"

[dependencies]
bit-set     = "0.5.2"
delegate    = "0.7.0"
once_cell   = "1.12.0"
pest        = "2.1.3"
pest_derive = "2.1.0"
regex       = "1.5.6"
slab        = "0.4.6"
thiserror   = "1.0.31"


[dependencies.pyo3]
optional = true
version = "0.16.5"
features = ["extension-module", "abi3", "abi3-py39"]

[lib]
crate-type = ["rlib", "cdylib"]
