[package]
name        = "bokit"
version     = "0.0.1"
authors     = ["Aurelien Naldi <aurelien.naldi@gmail.com>"]
description = "Boolean function manipulation Kit"
repository  = "https://github.com/GINsim/bokit/"
license     = "LGPL-3.0-or-later"
edition     = "2021"

[dependencies]
bit-set     = "0.5.3"
delegate    = "0.7.0"
once_cell   = "1.13.0"
pest        = "2.2.0"
pest_derive = "2.2.0"
regex       = "1.6.0"
slab        = "0.4.7"
thiserror   = "1.0.31"
itertools = "0.10.3"


[dependencies.pyo3]
optional = true
version = "0.16.5"
features = ["extension-module", "abi3", "abi3-py39"]

[lib]
crate-type = ["rlib", "cdylib"]
